tests/paczka1/small_fuzzy/82206289.err
Error in line 4: NCnXJC8Nnp A815 0,4
Error in line 11: vOy A815 -1,1
Error in line 9: TrTS6oK A815 25,6
